
     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2013
                    http://www.irisa.fr/lagadic


ViSP 2.7.1 (under development)
  - New features
  - Improvements
    . vpV4l2Grabber does no more require a call to open(I).
    . An exceptions is throwned when moving-edges are not initialized
      (vpMeTracker, vpMeLine, vpMeEllipse)
  - Examples
  - Bug fixed

----------------------------------------------
ViSP 2.7.0 (released February 11th, 2013)
  - New features
    - New vpViper650 and vpRobotViper650 classes to interface Inria's new
      Adept Viper s650 robot.
    - New robot simulators; vpSimulatorCamera, vpSimulatorPioneer,
      vpSimulatorPioneerPan
    - New model-based tracker using KLT points: vpMbKltTracker.
    - New hybrid model-based tracker using moving edges and KLT points:
      vpMbEdgeKltTracker
  - Improvements
    - Add visp-config.1 man page.
    - To respect Debian guidelines, remove duplicate ABI version.
      Library name was set to libvisp.a or libvisp.so.2.7.0 rather than
      libvisp-2.a or libvisp-2.so.2.7.0
    - Fix typos detected by lintian
    - Add support for multiarch. Multiarch is the ability for a library
      to be installed concurrently for differents architectures (such as
      i386 and amd64 for instance). In practice, the changes removes the
      assumption made that libraries are installed in $INSTALL_PREFIX/lib and
      binaries in $INSTALL_PREFIX/bin.
    - In vp1394TwoGrabber that allows to grab images from firewire cameras,
      cameras are powered off when the grabber is closed.
    - MinGW is now supported but since MinGW currently doesn't support tls
      __declspec(thread) with vpDisplayGDI it is possible to open only
      one display.
    - To better organise the code, robot simulators inherit from
      vpRobotSimulator class. Introduction of a new vpRobotWireFrameSimulator
      class as a base class of robot simulated using the wireframe display
      capabilities.