@@ -421,11 +421,16 @@ main(int argc, const char ** argv)
   }
   reader.close();
 
-  // Cleanup memory allocated by xml library used to parse the xml config file in vpMbEdgeTracker::loadConfigFile()
 #if defined (VISP_HAVE_XML2)
+  // Cleanup memory allocated by xml library used to parse the xml config file in vpMbKltTracker::loadConfigFile()
   vpXmlParser::cleanup();
 #endif
-  
+
+#ifdef VISP_HAVE_COIN
+  // Cleanup memory allocated by Coin library used to load a vrml model in vpMbKltTracker::loadModel()
+  SoDB::finish();
+#endif
+
   return 0;
 }
 
