@@ -14,6 +14,8 @@ ViSP 2.7.1 (under development)
       (vpMeTracker, vpMeLine, vpMeEllipse)
   - Examples
   - Bug fixed
+    . [15404] Segfault in vpMbTracker derived classes around Coin SoDB::init() and
+      SoDB::finish() usage
 
 ----------------------------------------------
 ViSP 2.7.0 (released February 11th, 2013)
